Improve misleading message when trying to decrypt a file without the public key available
Closed, ResolvedPublic

Assigned To
Authored By
dleidert
Jul 16 2012, 11:51 PM

Description

A Debian user reported the following:

Note: this is a minor problem, but which can greatly increase your blood
pressure when reinstalling backuped files during a crash recovery :)

Attempting to decypher a gpg encrypted file with the private key imported (gpg
--import < my_private_key) but without the public key actually imported leads to
a misleading gpg error message suggesting that the encrypted file is somehow
invalid because it was encrypted using an unsuitable (signing) algorithm:
gpg: Ohhhh jeeee: no decrypt() for 17

Importing the public key solves this minor issue.

Maybe a message such as:
gpg: Ohhhh jeeee: no decrypt() for 17: did you forget to import the public key ?

Would be better.

Please comment.

Details

External Link
http://bugs.debian.org/638619
Version
1.4.12

Event Timeline

dleidert set External Link to http://bugs.debian.org/638619.Jul 16 2012, 11:51 PM
dleidert set Version to 1.4.12.
dleidert added a subscriber: dleidert.
werner raised the priority of this task from Wishlist to Normal.Jul 18 2012, 2:33 PM
werner removed a project: Feature Request.
werner added a subscriber: werner.

That is actually a bug.

Now, we have a patch to fix in the Debian bug tracker.